grammars/tree-sitter-dart/grammar.js
    source_file: ($) =>
      seq(
        optional($.script_tag),
        optional($.library_name),
        repeat($.import_or_export),
        repeat($.part_directive),
        repeat($.part_of_directive),
        repeat($._top_level_definition),
      ),

    _top_level_definition: ($) =>
      choice(
        $._declaration,
        $.function_declaration,
        $.getter_declaration,
        $.setter_declaration,
        $.external_function_declaration,
        $.external_getter_declaration,
        $.external_setter_declaration,
        $.top_level_variable_declaration,
        $.external_variable_declaration,
      ),

    // ========================================================================
    // Library structure (Phase 9)
    // ========================================================================

    _metadata: ($) => repeat1($._annotation),

    type: ($) =>
      choice(
        nullable($.function_type),
        nullable($.record_type),
        $.void_type,
        nullable(seq($._type_name, optional($.type_arguments))),
        nullable("Function"),
      ),

    _type_not_void: ($) =>
      alias(
        choice(
          nullable($.function_type),
          nullable($.record_type),
          nullable(seq($._type_name, optional($.type_arguments))),
          nullable("Function"),
        ),
        $.type,
      ),

    _type_name: ($) =>
      seq(
        alias($.identifier, $.type_identifier),
        optional(
          prec.right(PREC.TYPE_IDENTIFIER, seq(".", alias($.identifier, $.type_identifier))),
        ),
      ),

    void_type: (_) => "void",

    type_arguments: ($) =>
      seq("<", commaSep1($.type), ">"),

    null_literal: (_) => "null",

    true: (_) => "true",
    false: (_) => "false",

    // Numeric literals (with digit separator support for Dart 3.6)
    decimal_integer_literal: (_) =>
      token(sep1(/[0-9]+/, /_+/)),

    hex_integer_literal: (_) =>
      token(seq(choice("0x", "0X"), sep1(/[A-Fa-f0-9]+/, /_+/))),

    decimal_floating_point_literal: (_) =>
      token(
        choice(
          seq(
            sep1(/[0-9]+/, /_+/),
            ".",
            sep1(/[0-9]+/, /_+/),
            optional(seq(/[eE]/, optional(choice("-", "+")), sep1(/[0-9]+/, /_+/))),
          ),
          seq(
            ".",
            sep1(/[0-9]+/, /_+/),
            optional(seq(/[eE]/, optional(choice("-", "+")), sep1(/[0-9]+/, /_+/))),
          ),
          seq(sep1(/[0-9]+/, /_+/), /[eE]/, optional(choice("-", "+")), sep1(/[0-9]+/, /_+/)),
        ),
      ),

    // --- Strings ---

    string_literal: ($) =>
      repeat1(
        choice(
          $.string_literal_double_quotes,
          $.string_literal_single_quotes,
          $.string_literal_double_quotes_multiple,
          $.string_literal_single_quotes_multiple,
          $.raw_string_literal_double_quotes,
          $.raw_string_literal_single_quotes,
          $.raw_string_literal_double_quotes_multiple,
          $.raw_string_literal_single_quotes_multiple,
        ),
      ),

    string_literal_double_quotes: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $.template_chars_double_single,
            "'",
            $.escape_sequence,
            $._sub_string_test,
            $.template_substitution,
          ),
        ),
        '"',
      ),

    string_literal_single_quotes: ($) =>
      seq(
        "'",
        repeat(
          choice(
            $.template_chars_single_single,
            '"',
            $.escape_sequence,
            $._sub_string_test,
            $.template_substitution,
          ),
        ),
        "'",
      ),

    _sub_string_test: (_) => seq("$", /[^a-zA-Z_{]/),

    symbol_literal: ($) =>
      prec.right(
        seq(
          "#",
          choice(
            seq($.identifier, repeat(seq(".", $.identifier))),
            "~",
            $.binary_operator,
            "[]",
            "[]=",
          ),
        ),
      ),

    // --- Collection literals ---

    list_literal: ($) =>
      seq(
        optional("const"),
        optional($.type_arguments),
        "[",
        commaSepTrailingComma($._element),
        "]",
      ),

    set_or_map_literal: ($) =>
      seq(
        optional("const"),
        optional($.type_arguments),
        "{",
        commaSepTrailingComma($._element),
        "}",
      ),

    _element: ($) =>
      choice(
        $._expression,
        $.pair,
        $.spread_element,
        $.null_aware_element,
        $.null_aware_pair,
        $.if_element,
        $.for_element,
      ),

    null_aware_element: ($) => seq("?", $._expression),

    null_aware_pair: ($) =>
      seq("?", field("key", $._expression), ":", field("value", choice($._expression, $.null_aware_element))),

    pair: ($) =>
      seq(
        field("key", $._expression),
        ":",
        field("value", choice($._expression, $.null_aware_element)),
      ),

    _expression: ($) =>
      choice(
        $.pattern_assignment,
        $.assignment_expression,
        $.throw_expression,
        seq($._real_expression, repeat($.cascade_section)),
      ),

    _expression_without_cascade: ($) =>
      choice(
        $.assignment_expression,
        $._real_expression,
        $.throw_expression,
      ),

    _real_expression: ($) =>
      choice(
        $.conditional_expression,
        $.logical_or_expression,
        $.if_null_expression,
        $.logical_and_expression,
        $.equality_expression,
        $.relational_expression,
        $.bitwise_or_expression,
        $.bitwise_xor_expression,
        $.bitwise_and_expression,
        $.shift_expression,
        $.additive_expression,
        $.multiplicative_expression,
        $.type_cast_expression,
        $.type_test_expression,
        $._unary_expression,
      ),

    // --- Throw ---

    throw_expression: ($) => seq("throw", field("value", $._expression)),

    // --- Assignment ---

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq(
          field("left", $.assignable_expression),
          field("operator", $._assignment_operator),
          field("right", $._expression),
        ),
      ),

    _assignment_operator: (_) =>
      choice(
        "=", "+=", "-=", "*=", "/=", "%=", "~/=",
        "<<=", ">>=", ">>>=", "&=", "^=", "|=", "??=",
      ),

    assignable_expression: ($) =>
      choice(
        $.identifier,
        seq(
          field("object", $._postfix_expression),
          ".",
          field("property", $.identifier),
        ),
        seq(
          field("object", $._postfix_expression),
          "[",
          field("index", $._expression),
          "]",
        ),
        seq(
          field("object", $._postfix_expression),
          "?.",
          field("property", $.identifier),
        ),
        seq(
          field("object", $._postfix_expression),
          "?",
          "[",
          field("index", $._expression),
          "]",
        ),
      ),

    // --- Conditional ---

    conditional_expression: ($) =>
      prec.left(
        PREC.CONDITIONAL,
        seq(
          $._real_expression,
          "?",
          field("consequence", $._expression_without_cascade),
          ":",
          field("alternative", $._expression_without_cascade),
        ),
      ),

    // --- If-null ---

    if_null_expression: ($) =>
      prec.left(
        PREC.IF_NULL,
        seq($._real_expression, repeat1(seq("??", $._real_expression))),
      ),

    // --- Logical ---

    logical_or_expression: ($) =>
      prec.left(PREC.LOGICAL_OR, seq($._real_expression, "||", $._real_expression)),

    logical_and_expression: ($) =>
      prec.left(PREC.LOGICAL_AND, seq($._real_expression, "&&", $._real_expression)),

    // --- Equality ---

    equality_expression: ($) =>
      prec.left(
        PREC.EQUALITY,
        choice(
          seq($._real_expression, choice("==", "!="), $._real_expression),
          seq("super", choice("==", "!="), $._real_expression),
        ),
      ),

    // --- Relational ---

    relational_expression: ($) =>
      prec.left(
        PREC.RELATIONAL,
        choice(
          seq($._real_expression, $.relational_operator, $._real_expression),
          seq("super", $.relational_operator, $._real_expression),
        ),
      ),

    relational_operator: (_) => choice("<", ">", "<=", ">="),

    // --- Type test/cast ---

    type_test_expression: ($) =>
      prec(PREC.RELATIONAL, seq($._real_expression, $.type_test)),

    type_test: ($) => seq($.is_operator, $._type_not_void),

    is_operator: (_) => seq("is", optional("!")),

    type_cast_expression: ($) =>
      prec.left(PREC.RELATIONAL, seq($._real_expression, $.type_cast)),

    type_cast: ($) => seq("as", $._type_not_void),

    // --- Bitwise ---

    bitwise_or_expression: ($) =>
      prec.left(
        PREC.BITWISE_OR,
        choice(
          seq($._real_expression, "|", $._real_expression),
          seq("super", repeat1(seq("|", $._real_expression))),
        ),
      ),

    bitwise_xor_expression: ($) =>
      prec.left(
        PREC.BITWISE_XOR,
        choice(
          seq($._real_expression, "^", $._real_expression),
          seq("super", repeat1(seq("^", $._real_expression))),
        ),
      ),

    bitwise_and_expression: ($) =>
      prec.left(
        PREC.BITWISE_AND,
        choice(
          seq($._real_expression, "&", $._real_expression),
          seq("super", repeat1(seq("&", $._real_expression))),
        ),
      ),

    // --- Shift ---

    shift_expression: ($) =>
      prec.left(
        PREC.SHIFT,
        choice(
          seq($._real_expression, $._shift_operator, $._real_expression),
          seq("super", repeat1(seq($._shift_operator, $._real_expression))),
        ),
      ),

    _shift_operator: (_) => choice("<<", ">>>", ">>"),

    // --- Additive ---

    additive_expression: ($) =>
      prec.left(
        PREC.ADDITIVE,
        choice(
          seq($._real_expression, $._additive_operator, $._real_expression),
          seq("super", repeat1(seq($._additive_operator, $._real_expression))),
        ),
      ),

    _additive_operator: (_) => choice("+", "-"),

    // --- Multiplicative ---

    multiplicative_expression: ($) =>
      prec.left(
        PREC.MULTIPLICATIVE,
        choice(
          seq(
            $._unary_expression,
            repeat1(seq(choice("*", "/", "%", "~/"), $._unary_expression)),
          ),
          seq("super", repeat1(seq(choice("*", "/", "%", "~/"), $._unary_expression))),
        ),
      ),

    // --- Unary ---

    _unary_expression: ($) =>
      prec(
        PREC.UNARY_PREFIX,
        choice($._postfix_expression, $.unary_expression),
      ),

    unary_expression: ($) =>
      prec(
        PREC.UNARY_PREFIX,
        choice(
          seq($.prefix_operator, $._unary_expression),
          seq($.negate_operator, $._unary_expression),
          $.await_expression,
          seq(choice("-", "~"), "super"),
          seq(choice("++", "--"), $.assignable_expression),
        ),
      ),

    prefix_operator: (_) => choice("-", "~"),

    negate_operator: (_) => "!",

    await_expression: ($) => seq("await", $._unary_expression),

    // --- Postfix ---

    _postfix_expression: ($) =>
      choice(
        $._primary,
        $.call_expression,
        $.member_expression,
        $.index_expression,
        $.null_aware_member_expression,
        $.null_aware_index_expression,
        $.null_assertion_expression,
        $.instantiation_expression,
        $.postfix_expression,
      ),

    postfix_expression: ($) =>
      prec.right(
        seq(field("argument", $.assignable_expression), choice("++", "--")),
      ),

    call_expression: ($) =>
      prec.dynamic(1, prec("call",
        seq(
          field("function", $._postfix_expression),
          field("arguments", $.arguments),
        ),
      )),

    // Named prec required so the `<` ambiguity (call/instantiation/relational)
    // falls through to GLR conflict declarations rather than being auto-resolved.
    cascade_section: ($) =>
      prec.left(
        PREC.CASCADE,
        seq(
          choice("..", "?.."),
          $._cascade_postfix_expression,
          optional(seq($._assignment_operator, $._expression_without_cascade)),
        ),
      ),

    _cascade_postfix_expression: ($) =>
      choice(
        $.cascade_selector,
        $.cascade_call_expression,
        $.cascade_member_expression,
        $.cascade_index_expression,
        $.cascade_null_aware_member_expression,
        $.cascade_null_aware_index_expression,
        $.cascade_null_assertion_expression,
      ),

    cascade_call_expression: ($) =>
      prec.left(
        PREC.UNARY_POSTFIX,
        choice(
          prec.dynamic(1, seq(
            field("property", $.identifier),
            optional(field("type_arguments", $.type_arguments)),
            field("arguments", $.arguments),
          )),
          seq(
            field("function", $._cascade_postfix_expression),
            optional(field("type_arguments", $.type_arguments)),
            field("arguments", $.arguments),
          ),
        ),
      ),

    ...postfixChainWrappers("_cascade_postfix_expression", "cascade_"),

    // --- Primary expressions ---

    static_member_shorthand: ($) =>
      prec.dynamic(-1,
        choice(
          seq(".", $.identifier),
          seq(".", "new"),
          seq("const", ".", choice($.identifier, "new"), $.arguments),
        ),
      ),

    // --- Arguments ---

    arguments: ($) => seq("(", optional($._argument_list), ")"),

    _argument_list: ($) =>
      prec.right(commaSep1TrailingComma(choice($.named_argument, $._expression))),

    named_argument: ($) => seq($.label, $._expression),

    // ========================================================================
    // Formal Parameters (Phase 5)
    // ========================================================================

    _formal_parameter_part: ($) =>
      seq(optional($.type_parameters), $.formal_parameter_list),

    formal_parameter_list: ($) =>
      choice(
        seq("(", ")"),
        seq("(", $._normal_formal_parameters, optional(","), ")"),
        seq(
          "(",
          $._normal_formal_parameters,
          ",",
          $.optional_formal_parameters,
          ")",
        ),
        seq("(", $.optional_formal_parameters, ")"),
      ),

    _normal_formal_parameters: ($) => commaSep1($.formal_parameter),

    formal_parameter: ($) => $._normal_formal_parameter,

    _normal_formal_parameter: ($) =>
      seq(
        optional($._metadata),
        choice(
          $._function_formal_parameter,
          $._simple_formal_parameter,
          $.constructor_param,
          $.super_formal_parameter,
        ),
      ),

    _declared_identifier: ($) =>
      seq(
        optional("covariant"),
        $._final_const_var_or_type,
        field("name", $.identifier),
      ),

    _statement: ($) =>
      choice(
        $.block,
        prec.dynamic(1, $.local_function_declaration),
        prec.dynamic(2, $.local_variable_declaration),
        $.for_statement,
        $.while_statement,
        $.do_statement,
        $.switch_statement,
        $.if_statement,
        $.try_statement,
        $.break_statement,
        $.continue_statement,
        $.rethrow_statement,
        $.return_statement,
        $.yield_statement,
        $.yield_each_statement,
        $.expression_statement,
        $.assert_statement,
        $.labeled_statement,
        $.empty_statement,
      ),

    block: ($) => seq("{", repeat($._statement), "}"),

    expression_statement: ($) => seq($._expression, ";"),

    initialized_variable_definition: ($) =>
      seq(
        $._declared_identifier,
        optional(seq("=", field("value", $._expression))),
        repeat(seq(",", $.initialized_identifier)),
      ),
